<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/venueListingDetailsMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        tools:context=".account.CredentialFragment"
        android:background="@drawable/gradient">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="account.CredentialFragment">

    <EditText
        android:id="@+id/nameFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:width="280dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="First Name"
        android:inputType="textPersonName"
        android:textColor="#FFF"
        android:textColorHint="#F6F6F6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view9" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Information"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:width="280dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="Last Name"
        android:inputType="textPersonName"
        android:textColor="#FFF"
        android:textColorHint="#F6F6F6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view8" />

    <EditText
        android:id="@+id/venue_description_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:width="280dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="Username"
        android:inputType="textPersonName"
        android:textColor="#FFF"
        android:textColorHint="#F6F6F6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <View
        android:id="@+id/view"
        android:layout_width="280dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerConfirmPassword" />

    <View
        android:id="@+id/view10"
        android:layout_width="280dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location" />

        <View
            android:id="@+id/view18"
            android:layout_width="280dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="#FFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cPhoneNumber" />

    <View
        android:id="@+id/view12"
        android:layout_width="280dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPassword" />

    <View
        android:id="@+id/view16"
        android:layout_width="280dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerConfirmEmail" />

    <View
        android:id="@+id/view17"
        android:layout_width="280dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailReset" />

    <View
        android:id="@+id/view8"
        android:layout_width="280dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameFirst" />

    <View
        android:id="@+id/view9"
        android:layout_width="280dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/venue_description_final" />

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/transparent_button"
            android:text="Submit"
            android:textAllCaps="false"
            android:textColor="#FFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view18"
            android:visibility="gone"/>

    <EditText
        android:id="@+id/emailReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:width="280dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="Email Address"
        android:inputType="textPersonName"
        android:textColor="#FFF"
        android:textColorHint="#F6F6F6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/cPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:width="280dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="Phone Number"
        android:inputType="number"
        android:textColor="#FFFFFF"
        android:textColorHint="#F6F6F6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view10" />

    <EditText
        android:id="@+id/registerConfirmEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:width="280dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="Confirm Email Address"
        android:inputType="textPersonName"
        android:textColor="#FFF"
        android:textColorHint="#F6F6F6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view17" />

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:width="280dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#F6F6F6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view16" />

    <EditText
        android:id="@+id/registerConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:width="280dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#F6F6F6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view12" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>