<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/venueListingDetailsMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".account.CreateMusicianFragment"
    android:background="@drawable/gradient">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".account.CreateMusicianFragment">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Musician"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--<EditText
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:width="280dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="Location"
        android:inputType="textPersonName"
        android:textColor="#FFF"
        android:textColorHint="#F6F6F6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />-->

    <EditText
        android:id="@+id/firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:width="280dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="Musician Name"
        android:inputType="textPersonName"
        android:textColor="#FFF"
        android:textColorHint="#F6F6F6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/firstName5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:width="280dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="No Genres Selected"
        android:inputType="textPersonName"
        android:textColor="#FFF"
        android:textColorHint="#F6F6F6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <EditText
        android:id="@+id/firstName3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:width="280dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="Distance To Travel"
        android:inputType="textPersonName"
        android:textColor="#FFF"
        android:textColorHint="#F6F6F6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location2" />

    <!--<View
        android:id="@+id/view7"
        android:layout_width="280dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location" />-->


    <AutoCompleteTextView
        android:id="@+id/location2"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="Town/City (Barnsley, UK)"
        android:textColor="#FFF"
        android:textColorHint="#F6F6F6"
        android:theme="@style/AutoComplete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view8" />

    <View
        android:id="@+id/view"
        android:layout_width="280dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstName3" />

    <View
        android:id="@+id/view8"
        android:layout_width="280dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstName" />

    <View
        android:id="@+id/view19"
        android:layout_width="280dp"
        android:layout_height="1dp"
        android:layout_marginTop="7dp"
        android:background="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstName5" />

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/transparent_button"
            android:onClick="submitBtnOnClick"
            android:text="Submit"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textColorHint="#FFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <Button
            android:id="@+id/uploadBtn"
            android:layout_width="133dp"
            android:layout_height="34dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/transparent_button"
            android:onClick="uploadBtnOnClick"
            android:text="Upload Photo"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textColorHint="#FFFF"
            app:layout_constraintEnd_toStartOf="@+id/takeBtn"
            app:layout_constraintHorizontal_bias="0.782"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectGenres" />

        <Button
            android:id="@+id/takeBtn"
            android:layout_width="133dp"
            android:layout_height="34dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="64dp"
            android:background="@drawable/transparent_button"
            android:onClick="takeBtnOnClick"
            android:text="Take Photo"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textColorHint="#FFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/uploadBtn"
            app:layout_constraintTop_toBottomOf="@+id/selectGenres" />

        <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uploadBtn"
        tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/selectGenres"
            android:layout_width="133dp"
            android:layout_height="34dp"
            android:layout_marginTop="12dp"
            android:layout_weight="1.0"
            android:background="@drawable/transparent_button"
            android:text="Select genres"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view19" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>